--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
     "require": {
         "php": ">=8.1",
         "composer/installers": "2.x-dev",
-        "cweagans/composer-patches": "dev-main",
+        "cweagans/composer-patches": "^1.7",
         "drupal/core-composer-scaffold": "^10",
         "drupal/core-recommended": "^10",
         "drush/drush": "11.x-dev",
         "oomphinc/composer-installers-extender": "dev-master",
-        "genero/kamihaya_cms": "^1.25"
+        "genero/kamihaya_cms": "^1.26"
     },
     "require-dev": {
         "acquia/coding-standards": "^2.0.0",
