--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,9 @@
         "cweagans/composer-patches": "^1.7",
         "drupal/core-composer-scaffold": "^10",
         "drupal/core-recommended": "^10",
-        "drush/drush": "11.x-dev",
         "oomphinc/composer-installers-extender": "dev-master",
-        "genero/kamihaya_cms": "^1.28"
+        "genero/kamihaya_cms": "^1.28",
+        "drush/drush": "^13.0"
     },
     "require-dev": {
         "acquia/coding-standards": "^2.0.0",
